[gd_scene load_steps=6 format=3 uid="uid://cpv21fb1y5mj"]

[ext_resource type="Texture2D" uid="uid://cf35ico67phj2" path="res://Assets/lodetreat.png" id="1_0pv3d"]
[ext_resource type="Script" path="res://game/UI/upgradesmovement.gd" id="1_m3fsg"]
[ext_resource type="Texture2D" uid="uid://ci4aay7vvnmxr" path="res://Assets/roidshroom.png" id="2_i6k18"]
[ext_resource type="Texture2D" uid="uid://btqcjlqas0h8f" path="res://Assets/strugglecorn.png" id="3_slt1e"]
[ext_resource type="FontFile" uid="uid://b12uhspi0hqu0" path="res://Assets/Splatfont2.ttf" id="5_uf4rk"]

[node name="upgrades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3fsg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2(28, 140)
scale = Vector2(0.15, 0.15)

[node name="lodetreat" type="TextureButton" parent="CanvasLayer/Node2D"]
offset_right = 2048.0
offset_bottom = 2048.0
disabled = true
texture_normal = ExtResource("1_0pv3d")

[node name="Node2D2" type="Node2D" parent="CanvasLayer"]
position = Vector2(122, 140)
scale = Vector2(0.15, 0.15)

[node name="roidshroom" type="TextureButton" parent="CanvasLayer/Node2D2"]
offset_left = 1955.0
offset_top = 15.0
offset_right = 4003.0
offset_bottom = 2063.0
texture_normal = ExtResource("2_i6k18")

[node name="Node2D3" type="Node2D" parent="CanvasLayer"]
position = Vector2(228, 140)
scale = Vector2(0.15, 0.15)

[node name="strugglingcorn" type="TextureButton" parent="CanvasLayer/Node2D3"]
offset_left = 3870.0
offset_top = 30.0
offset_right = 5918.0
offset_bottom = 2078.0
texture_normal = ExtResource("3_slt1e")

[node name="Label2" type="Label" parent="CanvasLayer/Node2D3/strugglingcorn"]
modulate = Color(0.27451, 0.133333, 0.0705882, 1)
z_index = 11
layout_mode = 0
offset_left = 776.667
offset_top = 1436.67
offset_right = 1056.67
offset_bottom = 1836.67
theme_override_fonts/font = ExtResource("5_uf4rk")
theme_override_font_sizes/font_size = 200
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Node2D3/strugglingcorn"]
modulate = Color(1, 0.909804, 0.847059, 1)
z_index = 11
layout_mode = 0
offset_left = 763.333
offset_top = 1423.33
offset_right = 1043.33
offset_bottom = 1823.33
theme_override_fonts/font = ExtResource("5_uf4rk")
theme_override_font_sizes/font_size = 200
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Node2D3"]
offset_left = 4653.0
offset_top = 1560.0
offset_right = 4920.0
offset_bottom = 1773.0
mouse_filter = 2
color = Color(0.796078, 0.568627, 0.466667, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 3.0
offset_right = 1130.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource("5_uf4rk")
theme_override_font_sizes/font_size = 69
text = "Round Completed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lodeend" type="Node2D" parent="CanvasLayer"]
position = Vector2(28, 140)

[node name="lodestart" type="Node2D" parent="CanvasLayer"]
position = Vector2(28, -385)

[node name="roidend" type="Node2D" parent="CanvasLayer"]
position = Vector2(122, 140)

[node name="roidstart" type="Node2D" parent="CanvasLayer"]
position = Vector2(122, -384)

[node name="cornend" type="Node2D" parent="CanvasLayer"]
position = Vector2(228, 140)

[node name="cornstart" type="Node2D" parent="CanvasLayer"]
position = Vector2(229, -382)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="CanvasLayer/Node2D/lodetreat" to="." method="_on_lodetreat_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D2/roidshroom" to="." method="_on_roidshroom_pressed"]
[connection signal="pressed" from="CanvasLayer/Node2D3/strugglingcorn" to="." method="_on_strugglingcorn_pressed"]
